--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-resumable-media==1.2.0
 googleapis-common-protos==1.52.0
 grpcio==1.35.0
 gunicorn==20.0.4
+heroku==0.1.4
 httplib2==0.19.0
 idna==2.10
 itsdangerous==1.1.0
@@ -34,10 +35,12 @@ msgpack==1.0.2
 packaging==20.9
 proto-plus==1.13.0
 protobuf==3.14.0
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 pyparsing==2.4.7
+python-dateutil==1.5
 pytz==2021.1
 requests==2.25.1
 rsa==4.7
