--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 beautifulsoup4==4.9.3
+blinker==1.4
 bs4==0.0.1
 CacheControl==0.12.6
 cachetools==4.2.1
@@ -11,6 +12,7 @@ firebase-admin==4.5.1
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 google-api-core==1.26.0
@@ -33,6 +35,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 msgpack==1.0.2
 packaging==20.9
+Pillow==8.1.0
 proto-plus==1.13.0
 protobuf==3.14.0
 psycopg2-binary==2.8.6
